stream settings: Correct alignment of filter streams div.
The div containing options for filtering streams was placed in the
centre. Aligned it towards the right. Had to pass a special check
variable in subs.js:540 to add the specific class for this purpose.
This was a specific scenario where this sort of CSS was to be added,
hence had to make a specific case.

Also, fixed the bottom border color of the search streams bar for night
mode.

--- a/static/styles/app_components.scss
+++ b/static/styles/app_components.scss
@@ -257,6 +257,10 @@
             }
         }
     }
+
+    .stream_sorter_toggle {
+        margin-left: auto;
+    }
 }
 
 /* -- unified overlay design component -- */
